--- a/src/app/my-add-todo-component/my-add-todo-component.component.html
+++ b/src/app/my-add-todo-component/my-add-todo-component.component.html
@@ -21,6 +21,13 @@
                     <input type="file"  (change)="onFileChange($event)"  class="form-control)" multiple>
               </div>
 
+              <section class="w-100 p-4 d-flex justify-content-center pb-4">
+                <div style="width: 22rem;">
+                  <label for="formFileMultiple" class="form-label">Multiple files input example</label>
+                  <input class="form-control" type="file" id="formFileMultiple" multiple="">
+                </div>
+              </section>
+
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
