--- a/src/app/my-add-todo-component/my-add-todo-component.component.html
+++ b/src/app/my-add-todo-component/my-add-todo-component.component.html
@@ -6,11 +6,8 @@
 
                 <label  for="tasktittle">Tittle</label>
                 <input type="text" [(ngModel)]="title" class="form-control mb-3" placeholder="Enter Tittle" id="tasktittle" name="title"/>
-
                 <label  for="taskdesc">Description</label>
                 <input type="text" [(ngModel)]="desc" name="desc" class="form-control" placeholder="Enter Description" id="taskdesc"/>
-
-
 
                 <div class="mx-4 mt-3">
                     <input type="checkbox" class="form-check-input" id="activetask">
@@ -21,14 +18,11 @@
 <!--                  <input type="file" (change)="onFileChange($event)" id="input-file-now" class="file-upload" />-->
 <!--                </div>-->
 <!--              </div>-->
-
-
               <div class="width= 300 , mt-3">
                     <input type="file"    class="form-control)" multiple>
               </div>
 
             </div>
-
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
 
@@ -39,28 +33,32 @@
       <section class="section-preview">
 
         <div class="file-upload-wrapper">
+
           <div class="card card-body view file-upload">
             <div class="card-text file-upload-message">
               <i class="fas fa-cloud-upload-alt"></i>
               <p>Drag and drop a file here or click</p>
               <p class="file-upload-error">Ooops, something wrong happended.</p>
             </div>
+
             <div class="mask rgba-stylish-slight" style=""></div>
-            <div class="file-upload-errors-container">
-              <ul></ul>
-            </div>
-            <input type="file" id="input-file-now" class="file_upload" multiple>
-            <button type="button" class="btn btn-sm btn-danger waves-effect waves-light">Remove
-              <i class="far fa-trash-alt ml-1"></i>
-            </button><div class="file-upload-preview" style="display: none;">
-            <span class="file-upload-render"></span>
-            <div class="file-upload-infos">
-              <div class="file-upload-infos-inner"><p class="file-upload-filename">
-                <span class="file-upload-filename-inner">1056.java</span></p>
-                <p class="file-upload-infos-message">Drag and drop or click to replace</p>
+
+              <div class="file-upload-errors-container">
+                <ul></ul>
               </div>
-            </div>
-          </div>
+              <input type="file" id="input-file-now" class="file_upload" multiple>
+              <button type="button" class="btn btn-sm btn-danger waves-effect waves-light">Remove
+                <i class="far fa-trash-alt ml-1"></i>
+              </button>
+              <div class="file-upload-preview" style="display: none;">
+                  <span class="file-upload-render"></span>
+                    <div class="file-upload-infos">
+                      <div class="file-upload-infos-inner"><p class="file-upload-filename">
+                        <span class="file-upload-filename-inner">1056.java</span></p>
+                        <p class="file-upload-infos-message">Drag and drop or click to replace</p>
+                      </div>
+                    </div>
+              </div>
           </div>
         </div>
       </section>
