--- a/src/app/my-add-todo-component/my-add-todo-component.component.html
+++ b/src/app/my-add-todo-component/my-add-todo-component.component.html
@@ -1,4 +1,5 @@
 <div class="container my-3">
+  <div class="card card-body" style="display: flex">
     <h3>Add Todo</h3>
 
         <form (ngSubmit)="onSubmit()">
@@ -13,59 +14,32 @@
                     <input type="checkbox" class="form-check-input" id="activetask">
                     <label class="form-check-label" for="activetask">Active</label>
                 </div>
-<!--              <div class="file-upload-errors-container">-->
-<!--                <div class="file-upload-wrapper">-->
-<!--                  <input type="file" (change)="onFileChange($event)" id="input-file-now" class="file-upload" />-->
-<!--                </div>-->
-<!--              </div>-->
-              <div class="width= 300 , mt-3">
-                    <input type="file"    class="form-control)" multiple>
+              <div class="mt-3 d-flex">
+                    <input type="file"  (change)="onFileChange($event)" class="form-control p-2" multiple accept="image/*" style="min-height:45px">
               </div>
-
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <div *ngIf="selectedPreviewFiles.length>0; then ShowPreview else HiddenPreview"></div>
+        <ng-template #ShowPreview>
+          <div class="row justify-content-start mt-5">
+            <div class="col-md-2" *ngFor='let url of selectedPreviewFiles;let i = index'>
+              <div>
+                <img  [src]="url" style="height: 100px; width: 100px; background-color: red" >
+              </div>
+              <div clas="row">
+<!--                <input (change)="uploadFile(i,$event)" class="btn btn-xs btn-danger p-2" type="file" accept="image/*">-->
+                <a (click)="removeFile(i)" class="btn btn-xs btn-danger p-2" >Remove</a>
+                <a (click)="removeFile(i)" class="btn btn-xs btn-danger p-2" >Remove</a>
+              </div>
 
-
-  <section>
-    <div class="bg-white border rounded-5">
-
-      <section class="section-preview">
-
-        <div class="file-upload-wrapper">
-
-          <div class="card card-body view file-upload">
-            <div class="card-text file-upload-message">
-              <i class="fas fa-cloud-upload-alt"></i>
-              <p>Drag and drop a file here or click</p>
-              <p class="file-upload-error">Ooops, something wrong happended.</p>
             </div>
-
-            <div class="mask rgba-stylish-slight" style=""></div>
-
-              <div class="file-upload-errors-container">
-                <ul></ul>
-              </div>
-              <input type="file" id="input-file-now" class="file_upload" multiple>
-              <button type="button" class="btn btn-sm btn-danger waves-effect waves-light">Remove
-                <i class="far fa-trash-alt ml-1"></i>
-              </button>
-              <div class="file-upload-preview" style="display: none;">
-                  <span class="file-upload-render"></span>
-                    <div class="file-upload-infos">
-                      <div class="file-upload-infos-inner"><p class="file-upload-filename">
-                        <span class="file-upload-filename-inner">1056.java</span></p>
-                        <p class="file-upload-infos-message">Drag and drop or click to replace</p>
-                      </div>
-                    </div>
-              </div>
           </div>
-        </div>
-      </section>
-
-
-    </div>
-  </section>
+        </ng-template>
+        <ng-template #HiddenPreview>
+          <div></div>
+        </ng-template>
+      </div>
 
 
 </div>
